add all rebuttal experiments

--- a/scripts/updated_dataset/25-rgm-simcse-training.ipynb
+++ b/scripts/updated_dataset/25-rgm-simcse-training.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The memory_profiler extension is already loaded. To reload it, use:\n",
+      "  %reload_ext memory_profiler\n",
+      "The watermark extension is already loaded. To reload it, use:\n",
+      "  %reload_ext watermark\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import random\n",
@@ -12,6 +23,7 @@
     "from random import randint\n",
     "import torch\n",
     "from transformers import AutoTokenizer, AutoModel\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# import adapters\n",
     "# from adapters import AutoAdapterModel\n",
@@ -34,16 +46,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2.1.1+cu121'"
+       "'2.5.0+cu124'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,14 +67,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "trailing comma not allowed without surrounding parentheses (504908212.py, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[30], line 4\u001b[0;36m\u001b[0m\n\u001b[0;31m    from text_embeddings_src.model_stuff import train_loop, fix_all_seeds,\u001b[0m\n\u001b[0m                                                                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m trailing comma not allowed without surrounding parentheses\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "from text_embeddings_src.model_stuff import train_loop\n",
+    "from text_embeddings_src.model_stuff import train_loop, fix_all_seeds,\n",
     "from text_embeddings_src.data_stuff import (\n",
     "    SameSentencePairDataset,\n",
     ")\n",
@@ -85,36 +106,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "                <script type=\"application/javascript\" id=\"jupyter_black\">\n",
-       "                (function() {\n",
-       "                    if (window.IPython === undefined) {\n",
-       "                        return\n",
-       "                    }\n",
-       "                    var msg = \"WARNING: it looks like you might have loaded \" +\n",
-       "                        \"jupyter_black in a non-lab notebook with \" +\n",
-       "                        \"`is_lab=True`. Please double check, and if \" +\n",
-       "                        \"loading with `%load_ext` please review the README!\"\n",
-       "                    console.log(msg)\n",
-       "                    alert(msg)\n",
-       "                })()\n",
-       "                </script>\n",
-       "                "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import black\n",
     "import jupyter_black\n",
@@ -174,17 +168,17 @@
      "text": [
       "Author: Rita González-Márquez\n",
       "\n",
-      "Last updated: 2024-08-07 15:58:09CEST\n",
+      "Last updated: 2024-11-18 11:44:51CET\n",
       "\n",
       "Python implementation: CPython\n",
-      "Python version       : 3.11.5\n",
-      "IPython version      : 8.18.1\n",
+      "Python version       : 3.12.4\n",
+      "IPython version      : 8.28.0\n",
       "\n",
-      "transformers: 4.35.2\n",
+      "transformers: 4.45.2\n",
       "\n",
       "Compiler    : GCC 11.2.0\n",
       "OS          : Linux\n",
-      "Release     : 3.10.0-1160.el7.x86_64\n",
+      "Release     : 4.18.0-553.el8_10.x86_64\n",
       "Machine     : x86_64\n",
       "Processor   : x86_64\n",
       "CPU cores   : 64\n",
@@ -192,19 +186,20 @@
       "\n",
       "Hostname: rgonzalesmarquez_GPU0-llm_gber7\n",
       "\n",
-      "pandas             : 2.1.3\n",
-      "matplotlib         : 3.8.2\n",
-      "numpy              : 1.26.2\n",
-      "jupyter_black      : 0.3.4\n",
+      "matplotlib         : 3.9.2\n",
+      "black              : 24.10.0\n",
+      "distro             : 1.9.0\n",
+      "pandas             : 2.2.3\n",
+      "numpy              : 1.26.4\n",
+      "torch              : 2.5.0\n",
       "text_embeddings_src: 0.0.0\n",
-      "torch              : 2.1.1\n",
+      "jupyter_black      : 0.4.0\n",
       "memory_profiler    : 0.61.0\n",
-      "black              : 23.11.0\n",
-      "distro             : 1.8.0\n",
+      "transformers       : 4.45.2\n",
       "\n",
-      "Watermark: 2.4.3\n",
+      "Watermark: 2.5.0\n",
       "\n",
-      "Ubuntu 22.04.3 LTS\n"
+      "Ubuntu 24.04 LTS\n"
      ]
     }
    ],
@@ -229,8 +224,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 298 ms, sys: 99.7 ms, total: 398 ms\n",
-      "Wall time: 478 ms\n"
+      "CPU times: user 269 ms, sys: 71.3 ms, total: 340 ms\n",
+      "Wall time: 265 ms\n"
      ]
     }
    ],
@@ -2966,6 +2961,223 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Training only on train set\n",
+    "Only MPNet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from text_embeddings_src.model_stuff import (\n",
+    "    train_loop_train_test_split,\n",
+    "\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_names = [\n",
+    "    \"MPNet\",\n",
+    "]\n",
+    "\n",
+    "\n",
+    "model_paths = [\n",
+    "    \"microsoft/mpnet-base\",\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model:  MPNet\n",
+      "Running on device: cuda\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of MPNetModel were not initialized from the model checkpoint at microsoft/mpnet-base and are newly initialized: ['mpnet.pooler.dense.bias', 'mpnet.pooler.dense.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "microsoft/mpnet-base\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4152e8e99e924b099595b9f59aa67b84",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/332 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "40b9a7c7f4964e2cb546c02ed621ae8c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/46 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8116b233424c4c69a05d7c3a4081f09f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/6 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------\n",
+      "CPU times: user 10min 16s, sys: 1min 24s, total: 11min 40s\n",
+      "Wall time: 6min 32s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "for i, model_name in enumerate(model_names):\n",
+    "    # fix random seeds\n",
+    "    fix_all_seeds()\n",
+    "\n",
+    "    # set up model\n",
+    "    print(\"Model: \", model_name)\n",
+    "    device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "    print(\"Running on device: {}\".format(device))\n",
+    "\n",
+    "    tokenizer = AutoTokenizer.from_pretrained(model_paths[i])\n",
+    "    model = AutoModel.from_pretrained(model_paths[i])\n",
+    "    print(model_paths[i])\n",
+    "\n",
+    "    # data\n",
+    "    # split the data in train and test before dataset and loader\n",
+    "    random_state = np.random.seed(42)\n",
+    "    (\n",
+    "        abstracts_iclr_train,\n",
+    "        abstracts_iclr_test,\n",
+    "        labels_iclr_train,\n",
+    "        labels_iclr_test,\n",
+    "    ) = train_test_split(\n",
+    "        iclr2024.abstract,\n",
+    "        labels_iclr,\n",
+    "        test_size=0.1,\n",
+    "        random_state=random_state,\n",
+    "    )\n",
+    "\n",
+    "    # only do a dataset and loader from the training set\n",
+    "    training_dataset = SameSentencePairDataset(\n",
+    "        abstracts_iclr_train,\n",
+    "        tokenizer,\n",
+    "        device,\n",
+    "    )\n",
+    "\n",
+    "    gen = torch.Generator()\n",
+    "    gen.manual_seed(42)\n",
+    "    training_loader = torch.utils.data.DataLoader(\n",
+    "        training_dataset, batch_size=64, shuffle=True, generator=gen\n",
+    "    )\n",
+    "\n",
+    "    # training\n",
+    "    losses, knn_accuracies = train_loop_train_test_split(\n",
+    "        model,\n",
+    "        training_loader,\n",
+    "        device,\n",
+    "        tokenizer,\n",
+    "        abstracts_iclr_train[labels_iclr_train != \"unlabeled\"].to_list(),\n",
+    "        abstracts_iclr_test[labels_iclr_test != \"unlabeled\"].to_list(),\n",
+    "        labels_iclr_train[labels_iclr_train != \"unlabeled\"],\n",
+    "        labels_iclr_test[labels_iclr_test != \"unlabeled\"],\n",
+    "        optimized_rep=\"av\",\n",
+    "        n_epochs=1,\n",
+    "        lr=2e-5,\n",
+    "    )\n",
+    "\n",
+    "    # save\n",
+    "    saving_path = Path(\"embeddings_\" + model_name.lower()) / Path(\n",
+    "        \"updated_dataset\"\n",
+    "    )\n",
+    "    (variables_path / saving_path).mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "    np.save(\n",
+    "        variables_path / saving_path / \"losses_run_simcse_1_train_test_split\",\n",
+    "        losses,\n",
+    "    )\n",
+    "    np.save(\n",
+    "        variables_path\n",
+    "        / saving_path\n",
+    "        / \"knn_accuracies_run_simcse_1_train_test_split\",\n",
+    "        knn_accuracies,\n",
+    "    )\n",
+    "\n",
+    "    # # clean up\n",
+    "    # model = None\n",
+    "    # tokenizer = None_train_test_split\n",
+    "    # gc.collect()\n",
+    "    # torch.cuda.empty_cache()\n",
+    "\n",
+    "    print(\"----------------------------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.4665144596651446]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(knn_accuracies)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Run 2\n",
     "Same as run 1 but for 10 epochs"
    ]
@@ -4267,18 +4479,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.5"
   }
  },
  "nbformat": 4,
