small import fix

--- a/scripts/updated_dataset/28-rgm-random-embedding-layer.ipynb
+++ b/scripts/updated_dataset/28-rgm-random-embedding-layer.ipynb
@@ -12,6 +12,7 @@
     "from random import randint\n",
     "import torch\n",
     "from transformers import AutoTokenizer, AutoModel\n",
+    "from transformers import BertConfig, BertModel\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib as mpl\n",
@@ -51,23 +52,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "from text_embeddings_src.model_stuff import fix_all_seeds, train_loop_embedding_layer, train_loop_train_test_split_embedding_layer, EmbeddingOnlyModel\n",
+    "from text_embeddings_src.model_stuff import (\n",
+    "    fix_all_seeds,\n",
+    "    train_loop_embedding_layer,\n",
+    "    train_loop_train_test_split_embedding_layer,\n",
+    "    EmbeddingOnlyModel,\n",
+    ")\n",
     "\n",
     "from text_embeddings_src.data_stuff import (\n",
     "    MultOverlappingSentencesPairDataset,\n",
@@ -79,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +136,7 @@
      "text": [
       "Author: Rita González-Márquez\n",
       "\n",
-      "Last updated: 2024-12-09 11:27:29CET\n",
+      "Last updated: 2024-12-09 14:59:05CET\n",
       "\n",
       "Python implementation: CPython\n",
       "Python version       : 3.12.4\n",
@@ -157,16 +154,16 @@
       "\n",
       "Hostname: rgonzalesmarquez_GPU0-llm_gber7\n",
       "\n",
-      "pandas             : 2.2.3\n",
-      "numpy              : 1.26.4\n",
-      "distro             : 1.9.0\n",
-      "jupyter_black      : 0.4.0\n",
-      "transformers       : 4.45.2\n",
       "text_embeddings_src: 0.0.0\n",
-      "memory_profiler    : 0.61.0\n",
       "torch              : 2.5.0\n",
-      "black              : 24.10.0\n",
+      "transformers       : 4.45.2\n",
+      "pandas             : 2.2.3\n",
       "matplotlib         : 3.9.2\n",
+      "numpy              : 1.26.4\n",
+      "memory_profiler    : 0.61.0\n",
+      "jupyter_black      : 0.4.0\n",
+      "black              : 24.10.0\n",
+      "distro             : 1.9.0\n",
       "\n",
       "Watermark: 2.5.0\n",
       "\n",
@@ -188,15 +185,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 280 ms, sys: 63.9 ms, total: 344 ms\n",
-      "Wall time: 378 ms\n"
+      "CPU times: user 271 ms, sys: 72.5 ms, total: 343 ms\n",
+      "Wall time: 329 ms\n"
      ]
     }
    ],
@@ -210,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +533,7 @@
        "[24347 rows x 13 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,12 +580,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from transformers import BertConfig, BertModel\n",
-    "\n",
     "# Initializing a BERT bert-base-uncased style configuration\n",
     "configuration = BertConfig()\n",
     "\n",
@@ -601,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -609,8 +604,8 @@
      "output_type": "stream",
      "text": [
       "Running on device: cuda\n",
-      "CPU times: user 51.6 ms, sys: 34.4 ms, total: 86 ms\n",
-      "Wall time: 379 ms\n"
+      "CPU times: user 44.1 ms, sys: 8.72 ms, total: 52.8 ms\n",
+      "Wall time: 183 ms\n"
      ]
     }
    ],
@@ -634,13 +629,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea089d3145984d1dbe9601e8896861ba",
+       "model_id": "c3331e8b036744c3a1c4f6de1e9e5bdf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -678,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -687,9 +682,8 @@
        "array([0.39923077, 0.03      , 0.01076923])"
       ]
      },
-     "execution_count": 19,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -709,8 +703,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from transformers import BertConfig, BertModel\n",
-    "\n",
     "# Initializing a BERT bert-base-uncased style configuration\n",
     "configuration = BertConfig()\n",
     "\n",
