--- a/scripts/updated_dataset/27-rgm-benchmarks.ipynb
+++ b/scripts/updated_dataset/27-rgm-benchmarks.ipynb
@@ -26,7 +26,6 @@
     "from transformers import BertConfig, BertModel\n",
     "import mteb\n",
     "from sentence_transformers import SentenceTransformer, models\n",
-    "from sentence_transformers import \n",
     "from sentence_transformers.models import Transformer\n",
     "\n",
     "\n",
@@ -770,7 +769,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Fine-tune MPNet and save the model\n",
+    "#### Fine-tune model and save\n",
     "We repeat the standard finetuning to be able to save the checkpoints"
    ]
   },
@@ -979,10 +978,6 @@
     }
    ],
    "source": [
-    "# SECOND\n",
-    "from sentence_transformers import models\n",
-    "from sentence_transformers.models import Transformer\n",
-    "\n",
     "# Load your custom base model and tokenizer\n",
     "checkpoint_dir = Path(\n",
     "    \"updated_dataset/model_checkpoints/mpnet_crops_finetuning\"\n",
@@ -2804,22 +2799,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pretrained_sbert = AutoModel.from_pretrained(\n",
-    "#     \"sentence-transformers/all-mpnet-base-v2\"\n",
-    "# )  # doesn't work\n",
-    "\n",
     "pretrained_sbert = SentenceTransformer(\n",
     "    \"sentence-transformers/all-mpnet-base-v2\"\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pretrained_sbert"
    ]
   },
   {
@@ -2937,34 +2919,7 @@
     }
    ],
    "source": [
-    "# pretrained_sbert = AutoModel.from_pretrained(\n",
-    "#     \"sentence-transformers/all-mpnet-base-v2\"\n",
-    "# )  # doesn't work\n",
-    "\n",
     "pretrained_simcse = SentenceTransformer(model_paths[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "SentenceTransformer(\n",
-       "  (0): Transformer({'max_seq_length': 512, 'do_lower_case': False}) with Transformer model: BertModel \n",
-       "  (1): Pooling({'word_embedding_dimension': 768, 'pooling_mode_cls_token': False, 'pooling_mode_mean_tokens': True, 'pooling_mode_max_tokens': False, 'pooling_mode_mean_sqrt_len_tokens': False, 'pooling_mode_weightedmean_tokens': False, 'pooling_mode_lasttoken': False, 'include_prompt': True})\n",
-       ")"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pretrained_simcse"
    ]
   },
   {
@@ -3589,7 +3544,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Fine-tune model"
+    "#### Fine-tune model and save"
    ]
   },
   {
