small fix imports

--- a/scripts/updated_dataset/23-rgm-guillotine.ipynb
+++ b/scripts/updated_dataset/23-rgm-guillotine.ipynb
@@ -64,7 +64,7 @@
     "    SameSentencePairDataset\n",
     ")\n",
     "from text_embeddings_src.embeddings import generate_embeddings_hidden_state\n",
-    "from text_embeddings_src.model_stuff import fix_all_seeds\n",
+    "from text_embeddings_src.model_stuff import fix_all_seeds, train_loop_without_eval\n",
     "from text_embeddings_src.metrics import knn_accuracy"
    ]
   },
